--- a/CareerExplorer.Web/Views/Vacancy/Create.cshtml
+++ b/CareerExplorer.Web/Views/Vacancy/Create.cshtml
@@ -102,6 +102,7 @@
             }
             $('#selected-skills-input').val(JSON.stringify(selectedTags));
         }
+        //position
         $(function() {
             $('#searchInput').on('input', function() {
                 var search = $(this).val();
