--- a/CareerExplorer.Web/Views/Shared/_LoginPartial.cshtml
+++ b/CareerExplorer.Web/Views/Shared/_LoginPartial.cshtml
@@ -30,6 +30,7 @@
                 <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false"> @UserManager.GetUserName(User)</a>
                 <div class="dropdown-menu">
                     <a class="dropdown-item" asp-controller="RecruiterProfile" asp-action="GetProfile">@Localizer["Profile"]</a>
+                    <a class="dropdown-item" asp-controller="Vacancy" asp-action="CreatedVacancies">Vacancies</a>
                     <div class="dropdown-divider"></div>
                     <form class="dropdown-item" id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("GetAll", "Vacancy", new { area = "" })">
                         <button id="logout" type="submit" class="nav-link btn btn-link text-dark border-0">@Localizer["Logout"]</button>
