--- a/CareerExplorer.Web/Views/Vacancy/Edit.cshtml
+++ b/CareerExplorer.Web/Views/Vacancy/Edit.cshtml
@@ -1,4 +1,5 @@
-﻿@using Microsoft.AspNetCore.Mvc.Localization
+﻿@using CareerExplorer.Core.Enums;
+@using Microsoft.AspNetCore.Mvc.Localization
 @using CareerExplorer.Web.DTO
 
 @model CreateOrEditVacancyDTO
@@ -27,6 +28,98 @@
             </div>
             <div class="form-control skill-tags-display" id="skill-tags-display"></div>
             <div class="mb-3">
+                <div class="form-group">
+                    <label asp-for="Salary" class="form-label mt-4">Salary</label>
+                    <div class="input-group mb-3">
+                        <span class="input-group-text">$</span>
+                        <input asp-for="Salary" type="text" class="form-control" aria-label="Amount (to the nearest dollar)">
+                        <span class="input-group-text">.00</span>
+
+                    </div>
+                    <span asp-validation-for="Salary" class="text-danger"></span>
+                </div>
+                <fieldset class="form-group mb-3">
+                    <legend class="mt-4">English level</legend>
+                    <div class="form-check">
+                        <input asp-for="@Model.EnglishLevel" class="form-check-input" type="radio"
+                               value=@((int)EnglishLevel.NoEnglish) checked="">
+                        <label class="form-check-label" for="optionsRadios1">
+                            No English
+                        </label>
+                    </div>
+                    <div class="form-check">
+                        <input asp-for="@Model.EnglishLevel" class="form-check-input" type="radio" value=@((int)EnglishLevel.Beginner)>
+                        <label class="form-check-label" for="optionsRadios2">
+                            Beginner/Elementary
+                        </label>
+                    </div>
+                    <div class="form-check disabled">
+                        <input asp-for="@Model.EnglishLevel" class="form-check-input" type="radio" value=@((int)EnglishLevel.PreIntermediate)>
+                        <label class="form-check-label" for="optionsRadios3">
+                            Pre-Intermediate
+                        </label>
+                    </div>
+                    <div class="form-check disabled">
+                        <input asp-for="@Model.EnglishLevel" class="form-check-input" type="radio" value=@((int)EnglishLevel.Intermediate)>
+                        <label class="form-check-label" for="optionsRadios3">
+                            Intermediate
+                        </label>
+                    </div>
+                    <div class="form-check disabled">
+                        <input asp-for="@Model.EnglishLevel" class="form-check-input" type="radio" value=@((int)EnglishLevel.UpperIntermediate)>
+                        <label class="form-check-label" for="optionsRadios3">
+                            Upper-Intermediate
+                        </label>
+                    </div>
+                    <div class="form-check disabled">
+                        <input asp-for="@Model.EnglishLevel" class="form-check-input" type="radio" value=@((int)EnglishLevel.Advanced)>
+                        <label class="form-check-label" for="optionsRadios3">
+                            Advanced/Fluent
+                        </label>
+                    </div>
+                </fieldset>
+                <fieldset class="form-group">
+                    <label asp-for="ExperienceYears" class="form-label">Years of Experience: <span style="font-size:20px;font-weight:bold;" id="range-value">@(Model.ExperienceYears ?? 0)</span></label>
+                    <input asp-for="ExperienceYears" type="range" class="form-range" min="0" max="6" step="1" oninput="updateValue(this.value)">
+                </fieldset>
+                 @* WorkType*@
+        <fieldset class="form-group mb-3">
+            <legend class="mt-4">Work Location</legend>
+            <div class="form-check">
+                <input asp-for="@Model.WorkType" class="form-check-input" type="radio"
+                       value=@((int)WorkType.Remote) checked="">
+                <label class="form-check-label" for="optionsRadios1">
+                    Remote
+                </label>
+            </div>
+            <div class="form-check">
+                <input asp-for="@Model.WorkType" class="form-check-input" type="radio" value=@((int)WorkType.OfficeRemote)>
+                <label class="form-check-label" for="optionsRadios2">
+                    Office/Remote
+                </label>
+            </div>
+            <div class="form-check disabled">
+                <input asp-for="@Model.WorkType" class="form-check-input" type="radio" value=@((int)WorkType.Office)>
+                <label class="form-check-label" for="optionsRadios3">
+                    Office
+                </label>
+            </div>
+        </fieldset>
+                @*Country*@
+                <div class="mb-3">
+                    <input asp-for="CountryId" id="countriesId" value="@(Model.CountryId??0)" hidden />
+                    <label>Country</label>
+                    <input type="text" class="form-control mb-3" id="countries" value="@(Model.Country?.Name??"")" placeholder="Choose your country" />
+
+                    <div class="mt-3" id="searchCountryResults"></div>
+                </div>
+                @*City*@
+                <div class="mb-3">
+                    <input asp-for="CityId" id="citiesId" hidden />
+                    <label>City</label>
+                    <input type="text" class="form-control mb-3" id="cities" value="@(Model.City?.Name??"")" placeholder="Choose your city" />
+                    <div id="searchCityResults"></div>
+                </div>
             <label >
                 <input class="form-check-input" type="radio" asp-for="IsAvailable" value="true" />
                     @Localizer["Available"]
@@ -125,12 +218,69 @@
             $('#searchResults').on('click', 'div', function () {
                 var value = $(this).text();
                 var ind = $(this).val();
-                //$('#searchInput').val(JSON.stringify(value));
                 $('#searchInput').val(value);
                 $('#searchInputForId').val(ind);
                 $('#searchResults').hide();
             });
         });
+        //country
+        $(function () {
+            $('#countries').on('input', function () {
+                var search = $(this).val();
+
+                $.get('/JobSeekerProfile/CountriesSearch',
+                    { search: search },
+                    function (results) {
+                        var $searchResults = $('#searchCountryResults');
+                        $searchResults.empty();
+                        $.each(results, function (index, value) {
+                            var $option = $('<div>').text(value.name);
+                            $option.val(value.id);
+                            $searchResults.append($option);
+                        });
+                        $searchResults.show();
+                    });
+            });
+
+            $('#searchCountryResults').on('click', 'div', function () {
+                var value = $(this).text();
+                var ind = $(this).val();
+                $('#countries').val(value);
+                $('#countriesId').val(ind);
+                $('#searchCountryResults').hide();
+            });
+        });
+        //city
+        $(function () {
+            $('#cities').on('input', function () {
+                var search = $(this).val();
+                var countryId = $('#countriesId').val();
+                $.get('/JobSeekerProfile/CitiesSearch',
+                    { search: search, countryId: countryId },
+                    function (results) {
+                        var $searchResults = $('#searchCityResults');
+                        $searchResults.empty();
+                        $.each(results, function (index, value) {
+                            var $option = $('<div>').text(value.name);
+                            $option.val(value.id);
+                            $searchResults.append($option);
+                        });
+                        $searchResults.show();
+                    });
+            });
+
+            $('#searchCityResults').on('click', 'div', function () {
+                var value = $(this).text();
+                var ind = $(this).val();
+                $('#cities').val(value);
+                $('#citiesId').val(ind);
+                $('#searchCityResults').hide();
+            });
+        });
+        //experience range
+        function updateValue(val) {
+            document.getElementById('range-value').innerHTML = val == 6 ? '>6' : val;
+        }
     </script>
 
 }
