--- a/CareerExplorer.Web/Views/Vacancy/GetApplicant.cshtml
+++ b/CareerExplorer.Web/Views/Vacancy/GetApplicant.cshtml
@@ -9,15 +9,60 @@
         <partial name="_RecrMenuPartial" />
     </div>
     <div class="col-md-10">
-        <h1>@Model.Name @Model.Surname</h1>
+        <hr />
+        @if(Model.DesiredPosition != null)
+        {
+            <h1>@Model.DesiredPosition.Name</h1>
+        } 
+        <h3 style="font-size:20px;">@Model.Name @Model.Surname</h3>
         <p>@Model.Experience</p>
-        <h4>@Localizer["Contacts"]</h4>
-        <span>@Localizer["Phone"]</span>
-        <h5>@Model.Phone</h5>
-        <span>@Localizer["GitHub"]</span>
-        <h5>@Model.GitHub</h5>
+        <div class="row mb-3">
+            <div class="col-6">
+                <h2 style="font-size:15px;">Skills</h2>
+        @if(Model.Skills.Count() > 0)
+        {
+            <ul style="list-style:none;">
+                @foreach(var skill in Model.Skills)
+                {
+                <li>
+                    <span class="badge rounded-pill bg-primary">@skill.Title</span>
+                </li>
+                }
+            </ul>           
+        }
+            </div>
+            <div class="col-6">
+                <h4 style="font-size:15px;">@Localizer["Contacts"]</h4>
+                @if (Model.Phone != null)
+                {
+                    <h5><i class="bi bi-telephone-fill"></i>@Model.Phone</h5>
+                }
+                @if (Model.GitHub != null)
+                {
+                    <a href="@Model.GitHub"><i class="bi bi-github"></i> @Model.GitHub</a>
+                }
+                @if (Model.LinkedIn != null)
+                {
+                    <span>LinkedIn</span>
+                    <a href="@Model.LinkedIn"><i class="bi bi-linkedin"></i> @Model.LinkedIn</a>
+                }
+
+
+                @if (Model.Country != null && Model.City != null)
+                {
+                    <p><i class="bi bi-geo-alt-fill"></i>@Model.Country.Name, @Model.City.Name</p>
+                }
+                else if (Model.Country != null)
+                {
+                    <p><i class="bi bi-geo-alt-fill"></i>@Model.Country.Name</p>
+
+                }
+            </div> 
+            <hr />
+        </div>
+
         <a id="viewCvBtn" class="btn btn-primary" data-jobseeker-id="@Model.Id" data-vacancy-id="@Model.VacancyId">@Localizer["View attached CV"]</a>
-        <a asp-controller="Chat" asp-action="GetChat" asp-route-receiverId="@ViewBag.ReceiverId">Send message</a>
+        <a class="btn btn-primary" asp-controller="Chat" asp-action="GetChat" asp-route-receiverId="@ViewBag.ReceiverId">Send message</a>
     </div>
 </div>
 
