--- a/CareerExplorer.Web/Views/Vacancy/GetAll.cshtml
+++ b/CareerExplorer.Web/Views/Vacancy/GetAll.cshtml
@@ -1,4 +1,5 @@
-﻿@using CareerExplorer.Web.DTO
+﻿@using CareerExplorer.Core.Enums;
+@using CareerExplorer.Web.DTO
 @using Microsoft.AspNetCore.Identity;
 @using CareerExplorer.Shared;
 @using Microsoft.AspNetCore.Mvc.Localization
@@ -38,12 +39,17 @@
         }
     </div>
     <div class="col-md-4">
-        <div class="filtering-box">
+        <div class="filtering-box mb-2">
             <span style="color:#fff;" >Filter by skills</span><br />
             @foreach(var tag in ViewBag.Tags)
             {
                 <button data-tag-id=@tag.Value style="display:inline-block;margin:0.1rem;border-radius:5%;" class="btn btn-light tag-btn">@tag.Text</button>
             }
+        </div>
+        <div class="filtering-box">
+            <button class="btn btn-light type-btn" data-type=@((int)WorkType.Remote)>Remote</button>
+            <button class="btn btn-light type-btn" data-type=@((int)WorkType.Office)>Office</button>
+            <button class="btn btn-light type-btn" data-type=@((int)WorkType.OfficeRemote)>Remote/Office</button>
         </div>
     </div>
     <div>
@@ -125,28 +131,35 @@
         });
         //filtering
         const savedTagIds = sessionStorage.getItem('selectedTagIds');
+        const savedTypes = sessionStorage.getItem('selectedTypes');
         const selectedTagIds = new Set();
+        const selectedTypes = new Set();
         if (savedTagIds) {
             savedTagIds.split(',').forEach(id => selectedTagIds.add(parseInt(id)));
         }
+        if(savedTypes) {
+            savedTypes.split(',').forEach(num => selectedTypes.add(parseInt(num)));
+        }
 
         function updateUrlAndNavigate() {
-            const pageNumber = @Model.PageIndex;
+            //const pageNumber = @Model.PageIndex;
             const tagIds = Array.from(selectedTagIds);
-            const url = `@Url.Action("GetAll")?pageNumber=${pageNumber}&tagIds=${tagIds.join(',')}`;
+            const types = Array.from(selectedTypes);
+            const url = `@Url.Action("GetAll")?pageNumber=${1}&tagIds=${tagIds.join(',')}&types=${types.join(',')}`;
             window.location.href = url;
         }
         function saveSelectedTagIdsInSession() {
             const tagIdsString = Array.from(selectedTagIds).join(',');
             sessionStorage.setItem('selectedTagIds', tagIdsString);
         }
+        function saveSelectedTypesInSession() {
+            const typesString = Array.from(selectedTypes).join(',');
+            sessionStorage.setItem('selectedTypes', typesString);
+        }
         const tagBtns = document.querySelectorAll('.tag-btn');
         tagBtns.forEach(btn => {
             if (!selectedTagIds.has(parseInt(btn.dataset.tagId))) {
                 btn.addEventListener('click', () => {
-                btn.classList.toggle('btn-primary');
-                btn.classList.toggle('btn-secondary');
-
                 const tagId = parseInt(btn.dataset.tagId);
                 
                 selectedTagIds.add(tagId);
@@ -165,6 +178,31 @@
                 });
             }
         });
+
+        const typeBtns = document.querySelectorAll('.type-btn');
+        typeBtns.forEach(btn => {
+            if(!selectedTypes.has(parseInt(btn.dataset.type))){
+                btn.addEventListener('click', () => {
+                    const typeNum = parseInt(btn.dataset.type);
+
+                    selectedTypes.add(typeNum);
+
+                    updateUrlAndNavigate();
+                    saveSelectedTypesInSession();
+                });
+            }
+            else {
+                btn.innerHTML += '<span>&times;</span>';
+                btn.setAttribute("class", "btn btn-custom");
+                btn.addEventListener('click', () => {
+                    const type = parseInt(btn.dataset.type);
+                    selectedTypes.delete(type);
+                    updateUrlAndNavigate();
+                    saveSelectedTypesInSession();
+                });
+            }
+        });
+
         const navigationElements = document.querySelectorAll(".navig-link");
 
         navigationElements.forEach(link => {
