--- a/CareerExplorer.Web/Areas/Identity/Pages/Account/Register.cshtml
+++ b/CareerExplorer.Web/Areas/Identity/Pages/Account/Register.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Register";
 }
 
-<h1>@ViewData["Title"]</h1>
 
 <div class="row mb-3">
-    <div class="col-md-4">
+    <div class="col-md-8">
+        <h1>@ViewData["Title"]</h1>
         <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
             <hr />
             <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
@@ -34,24 +34,10 @@
                 <input class="form-check-input" type="radio" asp-for="Input.Role" value="JobSeeker" />
                 JobSeeker
                 </label>
-            @*@foreach (var role in Model.Input.Roles)
-            {
-                <label class="button">
-                    <input type="radio" asp-for="Input.Role" value="@role" />
-
-                    @role
-
-                    <br />
-                </label>
-                
-            }*@
-            @*<div class="form-floating mb-3">
-                <select asp-for="Input.Role" asp-items="@Model.Input.Roles"></select>
-            </div>*@
             <button id="registerSubmit" type="submit" class="w-100 btn btn btn-primary mt-3">Register</button>
         </form>
     </div>
-    @*<div class="col-md-6 col-md-offset-2">
+    <div class="col-md-4 col-md-offset-2">
         <section>
             <h3>Use another service to register.</h3>
             <hr />
@@ -80,7 +66,7 @@
                 }
             }
         </section>
-    </div>*@
+    </div>
 </div>
 
 @section Scripts {
