--- a/CareerExplorer.Web/Views/Vacancy/Create.cshtml
+++ b/CareerExplorer.Web/Views/Vacancy/Create.cshtml
@@ -134,6 +134,11 @@
         </a>
     </div>
 </form>
+<style>
+    .close {
+        border: none;
+    }
+</style>
 @section scripts {
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://code.jquery.com/ui/1.13.1/jquery-ui.min.js"></script>
@@ -158,7 +163,6 @@
                     var tags = data.map(function (tag) {
                         return tag.title;
                     });
-                    console.log(tags, "tags");
                     $('#skill-tags-input').autocomplete({
                         source: tags,
                         minLength: 1,
