--- a/CareerExplorer.Web/Views/Vacancy/Create.cshtml
+++ b/CareerExplorer.Web/Views/Vacancy/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Microsoft.AspNetCore.Mvc.Localization
 @using CareerExplorer.Core.Enums;
 
-@model CareerExplorer.Web.DTO.CreateOrEditVacancyDTO
+@model CareerExplorer.Web.DTO.CreateVacancyDTO
 @inject IViewLocalizer Localizer
 <form method="post">
     <div class="border p-3 mt-4">
