--- a/CareerExplorer.Web/Views/Vacancy/Edit.cshtml
+++ b/CareerExplorer.Web/Views/Vacancy/Edit.cshtml
@@ -2,7 +2,7 @@
 @using Microsoft.AspNetCore.Mvc.Localization
 @using CareerExplorer.Web.DTO
 
-@model CreateOrEditVacancyDTO
+@model EditVacancyDTO
 @inject IViewLocalizer Localizer
 <div class="row mb-3">
     <div class="col-md-2">
