--- a/CareerExplorer.Web/Views/JobSeekerProfile/GetProfile.cshtml
+++ b/CareerExplorer.Web/Views/JobSeekerProfile/GetProfile.cshtml
@@ -10,6 +10,24 @@
         <partial name="_JobSeekerMenuPartial" />
     </div>
     <div class="col-md-10">
+        @if (!Model.IsFilled)
+        {
+            <span class="text-danger">@Localizer["Fill your profile to send it for review and start applying on vacancies."]</span>
+        }
+        else if (Model.IsFilled && !Model.IsAccepted)
+        {
+            <span>
+                <i class="bi bi-clock"></i>
+                @Localizer["Your profile is on review."]
+            </span>
+        }
+        else
+        {
+            <span>
+                <i class="bi bi-check2"></i>
+                @Localizer["Profile is verified!"]
+            </span>
+        }
         <form method="post" asp-action="GetProfile">
             <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
             <input asp-for="Id" hidden />
@@ -31,8 +49,7 @@
             </div>
             @*Position*@
             <div class="form-floating mb-3">   
-                @*<label class="form-label">Desired position</label>*@
-                <p>Select desired position</p>
+                <p>@Localizer["Select desired position"]</p>
                 <input asp-for="DesiredPositionId" id="positionId" value="@(Model.DesiredPositionId??0)" hidden />
                 
                 <input type="text" class="form-control mb-3" id="position" value="@(Model.DesiredPosition?.Name??"")" placeholder="Select desired position"/>
@@ -50,7 +67,7 @@
                     <span asp-validation-for="Experience" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Salary" class="form-label mt-4">Desired Salary</label>
+                <label asp-for="Salary" class="form-label mt-4">@Localizer["Desired Salary"]</label>
                     <div class="input-group mb-3">
                         <span class="input-group-text">$</span>
                         <input asp-for="Salary" type="text" class="form-control" aria-label="Amount (to the nearest dollar)">
@@ -60,7 +77,7 @@
                 <span asp-validation-for="Salary" class="text-danger"></span>
             </div>
             <fieldset class="form-group mb-3">
-                <legend class="mt-4">English level</legend>
+                <legend class="mt-4">@Localizer["English level"]</legend>
                 <div class="form-check">
                     <input asp-for="@Model.EnglishLevel" class="form-check-input" type="radio" 
                     value=@((int)EnglishLevel.NoEnglish) checked="">
@@ -100,7 +117,7 @@
                 </div>
             </fieldset>
             <fieldset class="form-group">
-                <label asp-for="ExperienceYears" class="form-label">Years of Experience: <span style="font-size:20px;font-weight:bold;" id="range-value">@(Model.ExperienceYears ?? 0)</span></label>
+                <label asp-for="ExperienceYears" class="form-label">@Localizer["Years of Experience"]: <span style="font-size:20px;font-weight:bold;" id="range-value">@(Model.ExperienceYears ?? 0)</span></label>
                 <input asp-for="ExperienceYears" type="range" class="form-range" min="0" max="6" step="1" oninput="updateValue(this.value)">
              </fieldset>
             <div class="form-floating mb-3">
@@ -110,22 +127,22 @@
             </div>
             <div class="form-floating mb-3">
                 <input asp-for="LinkedIn" class="form-control" />
-                <label asp-for="LinkedIn" class="form-label">LinkedIn</label>
+                <label asp-for="LinkedIn" class="form-label">@Localizer["LinkedIn"]</label>
                 <span asp-validation-for="LinkedIn" class="text-danger"></span>
             </div>
             @*Country*@
             <div class="mb-3">               
                 <input asp-for="CountryId" id="countriesId" value="@(Model.CountryId??0)" hidden />
-                <label >Country</label>
-                <input type="text" class="form-control mb-3" id="countries" value="@(Model.Country?.Name??"")" placeholder="Choose your country"/>
+                <label >@Localizer["Country"]</label>
+                <input type="text" class="form-control mb-3" id="countries" value="@(Model.Country?.Name??"")" placeholder="@Localizer["Choose your country"]"/>
                 
                 <div class="mt-3" id="searchResults"></div>
             </div>
             @*City*@
             <div class="mb-3">
                 <input asp-for="CityId" id="citiesId" hidden />
-                <label>City</label>
-                <input type="text" class="form-control mb-3" id="cities" value="@(Model.City?.Name??"")" placeholder="Choose your city" />
+                <label>@Localizer["City"]</label>
+                <input type="text" class="form-control mb-3" id="cities" value="@(Model.City?.Name??"")" placeholder="@Localizer["Choose your city"]" />
                 <div id="searchCityResults"></div>
             </div>
             
