--- a/CareerExplorer.Web/Views/Shared/_JobSeekerMenuPartial.cshtml
+++ b/CareerExplorer.Web/Views/Shared/_JobSeekerMenuPartial.cshtml
@@ -1,4 +1,7 @@
-﻿<div class="list-group">
-    <a asp-controller="JobSeekerProfile" asp-action="GetProfile" type="button" class="btn btn-primary">Profile</a>
-    <a asp-controller="Chat" asp-action="GetJobSeekerChats" type="button" class="btn btn-primary">Chats</a>
+﻿@using Microsoft.AspNetCore.Mvc.Localization
+@inject IViewLocalizer Localizer
+
+<div class="list-group">
+    <a asp-controller="JobSeekerProfile" asp-action="GetProfile" type="button" class="btn btn-primary">@Localizer["Profile"]</a>
+    <a asp-controller="Chat" asp-action="GetJobSeekerChats" type="button" class="btn btn-primary">@Localizer["Chats"]</a>
 </div>
