--- a/CareerExplorer.Web/Views/Vacancy/Edit.cshtml
+++ b/CareerExplorer.Web/Views/Vacancy/Edit.cshtml
@@ -29,7 +29,7 @@
             <div class="form-control skill-tags-display" id="skill-tags-display"></div>
             <div class="mb-3">
                 <div class="form-group">
-                    <label asp-for="Salary" class="form-label mt-4">Salary</label>
+                    <label asp-for="Salary" class="form-label mt-4">@Localizer["Salary"]</label>
                     <div class="input-group mb-3">
                         <span class="input-group-text">$</span>
                         <input asp-for="Salary" type="text" class="form-control" aria-label="Amount (to the nearest dollar)">
@@ -39,7 +39,7 @@
                     <span asp-validation-for="Salary" class="text-danger"></span>
                 </div>
                 <fieldset class="form-group mb-3">
-                    <legend class="mt-4">English level</legend>
+                    <legend class="mt-4">@Localizer["English level"]</legend>
                     <div class="form-check">
                         <input asp-for="@Model.EnglishLevel" class="form-check-input" type="radio"
                                value=@((int)EnglishLevel.NoEnglish) checked="">
@@ -84,7 +84,7 @@
                 </fieldset>
                  @* WorkType*@
         <fieldset class="form-group mb-3">
-            <legend class="mt-4">Work Location</legend>
+            <legend class="mt-4">@Localizer["Work Location"]</legend>
             <div class="form-check">
                 <input asp-for="@Model.WorkType" class="form-check-input" type="radio"
                        value=@((int)WorkType.Remote) checked="">
@@ -108,7 +108,7 @@
                 @*Country*@
                 <div class="mb-3">
                     <input asp-for="CountryId" id="countriesId" value="@(Model.CountryId??0)" hidden />
-                    <label>Country</label>
+                    <label>@Localizer["Country"]</label>
                     <input type="text" class="form-control mb-3" id="countries" value="@(Model.Country?.Name??"")" placeholder="Choose your country" />
 
                     <div class="mt-3" id="searchCountryResults"></div>
@@ -116,7 +116,7 @@
                 @*City*@
                 <div class="mb-3">
                     <input asp-for="CityId" id="citiesId" hidden />
-                    <label>City</label>
+                    <label>@Localizer["City"]</label>
                     <input type="text" class="form-control mb-3" id="cities" value="@(Model.City?.Name??"")" placeholder="Choose your city" />
                     <div id="searchCityResults"></div>
                 </div>
